--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-2": "^6.5.0",
