--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^0.2.0-rc.0",
-    "apollo-client": "2.0.0-rc.3",
-    "apollo-link": "^0.8.0",
-    "apollo-link-error": "^0.2.0",
-    "apollo-link-http": "^0.8.0",
-    "apollo-link-ws": "^0.6.0",
-    "apollo-utilities": "^0.1.1-0",
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "2.0.1",
+    "apollo-link": "^1.0.0",
+    "apollo-link-error": "^1.0.0",
+    "apollo-link-http": "^1.0.0",
+    "apollo-link-ws": "^1.0.0",
+    "apollo-utilities": "^1.0.0",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "graphql": "^0.11.7",
@@ -74,13 +74,13 @@
     "persistgraphql": "^0.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-apollo": "^2.0.0-beta.0",
+    "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
     "react-ga": "^2.1.0",
     "react-native-web": "^0.1.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-timeago": "^3.0.0",
-    "subscriptions-transport-ws": "^0.7.0"
+    "subscriptions-transport-ws": "^0.9.1"
   }
 }
