test on latest packages

--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.0.0",
-    "apollo-client": "2.0.1",
-    "apollo-link": "^1.0.0",
-    "apollo-link-error": "^1.0.0",
-    "apollo-link-http": "^1.0.0",
-    "apollo-link-ws": "^1.0.0",
-    "apollo-utilities": "^1.0.0",
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "2.0.3",
+    "apollo-link": "^1.0.3",
+    "apollo-link-error": "^0.2.0",
+    "apollo-link-http": "^1.2.0",
+    "apollo-link-ws": "^1.0.1",
+    "apollo-utilities": "^1.0.2",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "graphql": "^0.11.7",
@@ -74,7 +74,7 @@
     "persistgraphql": "^0.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-apollo": "^2.0.0",
+    "react-apollo": "^2.0.0-beta.0",
     "react-dom": "^16.0.0",
     "react-ga": "^2.1.0",
     "react-native-web": "^0.1.6",
